--- a/hands-on-1/style.css
+++ b/hands-on-1/style.css
@@ -16,15 +16,16 @@ h2 {
 }
 
 .site-header {
-  padding: 18px 42px;
+  padding: 18px 36px;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 12%),
     0px 4px 5px 0px rgb(0 0 0 / 12%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
   display: flex;
-  justify-content: space-between;
+  align-items: center;
 }
 
 .site-title {
   display: inline-block;
+  padding: 15px 20px;
 }
 
 .site-nav {
@@ -32,7 +33,7 @@ h2 {
   margin-left: 18px;
 }
 
-.nev-link {
+.nav-link {
   margin: 16px;
   text-decoration: none;
   color: #2c2b47;
