--- a/hands-on-1/style.css
+++ b/hands-on-1/style.css
@@ -12,23 +12,23 @@ body {
 }
 
 h2 {
-  font-size: 32px;
+  font-size: 28px;
 }
 
-.site-header {
-  padding: 18px 36px;
+#site-header {
+  /* padding: 18px 42px; */
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 12%),
     0px 4px 5px 0px rgb(0 0 0 / 12%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
-  display: flex;
+  /* display: flex; */
   align-items: center;
 }
 
-.site-title {
+#site-title {
   display: inline-block;
   padding: 15px 20px;
 }
 
-.site-nav {
+#site-nav {
   display: inline-block;
   margin-left: 18px;
 }
@@ -39,14 +39,14 @@ h2 {
   color: #2c2b47;
 }
 
-.site-footer {
+#site-footer {
   background-color: #2c2b47;
   color: white;
   padding: 16px;
   text-align: center;
 }
 
-.site-main {
+#site-main {
   width: 80%;
   margin: auto;
 }
