--- a/style.css
+++ b/style.css
@@ -3,6 +3,28 @@
 body {
   font-family: "Assistant", sans-serif;
   background-color: #eee;
+  width: 100%;
+  height: auto;
+}
+
+nav {
+  width: 100%;
+  height: auto;
+  padding: 6px 24px;
+  background-color: white;
+  box-shadow: 0 0 10px 5px rgb(83, 123, 255);
+  box-sizing: border-box;
+
+  display: flex;
+  justify-content: space-between;
+
+  margin-bottom: 20px; /*สำหรับจัด layout ปุ่ม login ไปทางขวา */
+}
+
+.milestone-container {
+  display: flex;
+  gap: 10px;
+  margin: 20px;
 }
 
 .milestone {
@@ -17,11 +39,11 @@ body {
   display: inline-block;
   background-color: whitesmoke;
   box-shadow: 0 0 10px 5px rgb(83, 123, 255);
-  width: 500px;
-  height: auto;
+  width: 400px;
+  height: 300px;
   border-radius: 8px;
   padding: 10px;
-  margin: 24px 8px;
+  /* margin: 24px 8px; */
 }
 
 button:hover {
@@ -39,4 +61,12 @@ input:focus {
 
 a:hover {
   color: lightcoral;
+}
+
+.btn1 {
+  color: green;
+  padding: 6px 8px;
+  width: auto;
+  height: auto;
+  margin: 10px;
 }
