--- a/style.css
+++ b/style.css
@@ -3,21 +3,17 @@
 body {
   font-family: "Assistant", sans-serif;
   background-color: #eee;
-  width: 100%;
-  height: auto;
 }
 
 nav {
   width: 100%;
   height: auto;
-  padding: 6px 24px;
+  padding: 12px 20px;
   background-color: white;
-  box-shadow: 0 0 10px 5px rgb(83, 123, 255);
+  box-shadow: 0 0 10px 5px gray;
   box-sizing: border-box;
-
   display: flex;
   justify-content: space-between;
-
   margin-bottom: 20px; /*สำหรับจัด layout ปุ่ม login ไปทางขวา */
 }
 
@@ -25,6 +21,7 @@ nav {
   display: flex;
   gap: 10px;
   margin: 20px;
+  align-items: center;
 }
 
 .milestone {
@@ -38,12 +35,12 @@ nav {
 .milestone-card {
   display: inline-block;
   background-color: whitesmoke;
-  box-shadow: 0 0 10px 5px rgb(83, 123, 255);
+  box-shadow: 0 0 10px 5px gray;
   width: 400px;
   height: 300px;
   border-radius: 8px;
   padding: 10px;
-  /* margin: 24px 8px; */
+  margin: 24px 8px;
 }
 
 button:hover {
@@ -69,4 +66,16 @@ a:hover {
   width: auto;
   height: auto;
   margin: 10px;
+}
+
+@media (max-width: 764px) {
+  .milestone-container {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .milestone-card {
+    width: 100%;
+    box-sizing: border-box;
+  }
 }
